feat: introduce tags and series API and frontend component
